--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dwalkr.github.io/sawmill/"
+baseURL = "https://dwalkr.github.io/"
 languageCode = "en-us"
 theme = "sawmill"
 title = "Sawmill"
